# sdl2-enscripten-game-cpp

./: CMakeLists.txt
src/: Assets.cpp  Assets.h  Game.cpp  Game.h  GameScene.cpp  GameScene.h  MenuScene.cpp  MenuScene.h  OptionsScene.cpp  OptionsScene.h  Scene.h  Text.cpp  Text.h  Zoom.cpp  Zoom.h  main.cpp
